<resources>
    <string name="app_name">ResepMasak</string>
    <string name="about">Nama Pembuat : Dewi Setiani</string>
    <string name="about1">Tentang Aplikasi : Aplikasi ini untuk memperkaya wawasan,
    pengetahuan dan keterampilan kita dalam hal pengolahan makanan, apalagi jika dalam
    resep tersebut kita menemukan tips atau trik tertentu, yang dipergunakan dalam memasak</string>
    <string name="bahan">->Bahan-bahan: \n1.Kangkung - 1 ikat
\n2.Bayam - 1 ikat
\n3.Tauge - 100 gram
\n4.Kacang panjang - 100 gram
\n5.Kol - 100 gram
\n6.Labu siam - 100 gram
\n->Bumbu:
\n1.Kacang tanah, goreng - 100 gram
\n2.Bawang putih - 1 siung
\n3.Kencur - 3 cm
\n4.Cabai rawit - 3 buah
\n5.Terasi, goreng - 1/2 sdt
\n6.Garam - 1 sdt
\n7.Gula merah - 1 sdt
\n8.Air asam - 1 sdm
\n9.Jeruk limau, ambil airnya - 1 buah
\n10.Air matang - secukupnya
\n->Pelengkap:
\n1.Bawang merah goreng - secukupnya
\n2.Kerupuk - secukupnya</string>
    <string name="cara">->Langkah:\nSiapkan semua sayuran. Petik dan potong-potong kangkung serta  daun bayam. Cuci bersih dan tiriskan. Cuci bersih tauge, kacang panjang, kol, dan labu siam. Potong-potong kacang panjang dan kol. Iris kecil labu siam.
Rebus masing-masing sayuran. Angkat dan tiriskan.
Haluskan bawang putih, kencur, cabai rawit, dan garam.
Tambahkan kacang tanah goreng dan gula merah. Haluskan kembali.
Tuang air asam, air perasan jeruk limau, dan air matang secukupnya hingga saus berubah jadi pasta.
Masukan sayur rebus. Aduk rata hingga sayur terlumuri oleh saus seluruhnya.
Tata di piring dan siap disajikan bersama bahan pelengkap.</string>
    <string name="tips">->Tips:\nSayuran jangan direbus terlalu lama agar teksturnya tetap terjaga.</string>
    <string name="a">->bahan bahan:
\n1.1 bungkus mie telor (kurang lebih 250 gr)
\n2. bakso secukupnya
\n3.tauge rebus secukupnya
\n4.daun bawang secukupnya, potong tipis
\n5. 2 lembar daun salam
\n6. 2 lembar daun jeruk, buang tulang daunnya
\n7. 1 batang serai, memarkan
\n8. 1 cm jahe, memarkan</string>
    <string name="b">->bumbu halus:
\n4 siung bawang putih
\n6 siung bawang merah
\n2 butir kemiri
\n1 sdm ebi kering
\n1/2 sdt merica
\n1 sdt gula
\ngaram secukupnya
       ->Bumbu kuah:
\n300 gr kikil sapi/ daging tetelan sapi
\n2 siung bawang putih, memarkan
\n1.5 liter air
\nmerica dan garam secukupnya</string>
    <string name="c">->Cara membuat:\n
Rebus kikil sapi, buang busanya. Masukkan garam, bawang putih, dan merica secukupnya. Masak hingga matang, kikil empuk.
Tumis bumbu halus, masukkan daun salam, serai, jahe dan daun jeruk. Masak hingga matang. Tuangkan ke dalam kaldu sapi. Rebus hingga kaldu terasa sedap.
Rebus mie telur. sisihkan.
Tata dalam mangkuk, mie telur, bakso, tauge, dan potongan tomat (jika suka). Potong-potong kikil sapi, taruh juga di mangkuk. Tuang dengan kuah kaldu sapi.
Taburi dengan daun bawang dan bawang goreng.
Mie kocok bandung siap sajikan hangat dengan sambal dan kerupuk.</string>
    <string name="d">->Bahan Dasar Resep Asinan Bogor :\n
Sediakan buah-buahan seperti kedondong, mangga mengkal, nanas, timun, bengkuang dan lainnya, porsi disesuaikan dengan selera. Potong dengan ukuran sesuai selera.</string>
    <string name="e">->Bahan Kuah Resep Asinan Bogor :\n1.Sediakan 100 gr gula pasir\n2.Sediakan 10 buah cabai merah besar, haluskan\n3.Sediakan 10 buah cabai rawit, haluskan\n4.Sediakan 1 sdm asam jawa\n5.Sediakan 2 sdm cuka masak\n6.Sediakan 2 sdm garam dapur\n7.Sediakan 1500 ml Air\n
Cara Membuat Resep Asinan Bogor :\n
1.Langkah pertama didihkan air dan  masukkan gula pasir, cabai merah dan cabai rawit yang sudah dihaluskan, garam dan asam jawa. Masak hingga gula dan asam jawa larut, angkat dan biarkan hingga dingin.
\n2.Setelah dingin kemudian pindahkan kedalam wadah plastik dan barulah bubuhkan cuka.
\n3.Lalu masukkan buah-buahan yang telah dipotong-potong.
\n4.Asinan buah dapat langsung dinikmati, tetapi untuk mendapatkan citarasa yang lebih enak sebaiknya dibiarkan dulu semalaman di kulkas dan besoknya baru dihidangkan.</string>
    <string name="f">->Bahan-bahan:\n1.250 gr daging sapi,rebus hingga empuk potong sesuai selera\n2.5 lbr daun jeruk\n3.3 lbr daun salam\n4.1 btg sereh\n5.3 bh cengkeh\n6.secukupnya Air\n7.1 santan instan\n8.Garam\n9.Gula\n10.Merica
\n->Bumbu halus :
\n1.3 bh cabe merah, buang bijinya
\n2.3 siung bawang putih
\n3.7 bh bawang merah
\n4.1 ruas lengkuas
\n5.1 ruas jahe
\n6.1 ruas kunyit
\n7.5 butir kemiri
\n->Pelengkap dan taburan :
\n1.Lontong/ketupat
\n2.Bawang goreng
\n3.Seledri, dirajang
\n4.Kacang tanah goreng
\n5.Emping
\n6.Telur rebus, tadi d skip karena ga sempat ngrebus telor
\n7.Sambel
\n8.Jeruk limau
\n
\n->Langkah:
\n1.Didihkan air.. Masukkan daging rebus yg sudah di potong potong
\n2.Tumis bumbu halus hingga harum.. Masukkan daun salam, daun jeruk, sereh, cengkeh.. Matangkan bumbu tuang ke dalam rebusan daging
\n3.Tambahkan garam gula merica.. Tes rasa.. Tuangkan santan.. Matikan api
\n4.Susun lontong di piring.. Tuangi dengan kuah kari.. Tambahkan bahan pelengkap</string>
    <string name="g">->Bahan Serabi:
\n1.150 gram tepung beras
\n2.250 ml santan kental
\n3.1/2 sdt fermipan
\n4.50 gram gula pasir
\n5.1/4 sdt garam
\n6.1/4 sdt vanili bubuk
\n7.pasta pandan (opsional)
\n->Bahan Kuah:
\n350 ml santan
\n80 gram gula merah
\n1 lembar daun pandan
\n->Cara Membuat:
\nRebus santan, garam, dan vanili sampai mendidih.
Campur tepung beras, gula pasir, fermipan, dan vanili.
Aduk rata lalu masukkan santan yang sudah direbus.
Aduk lagi sampai tak ada yang menggumpal.
Saring agar adonan benar-benar halus.
Tambahkan pasta pandan jika suka.
Siapkan wajan teflon, beri sedikit minyak goreng dan masak serabi sampai matang.
Ulangi sampai semua adonan habis.
Masak kuahnya, campur semua bahan dan aduk terus di atas api kecil.
Setelah matang matikan api dan saring kuah.
Sajikan serabi bersama kuah santan.\n

Ladies bisa menambahkan nangka atau durian agar kuah serabi terasa lebih lezat. Selamat mencoba ya.</string>
    <string name="h">->Bahan kulit :
\n200 gram terigu protein sedang
\n800 ml susu cair atau air biasa
\n2 butir telor
\n1 sdt garam
\n2 sdm minyak sayur
\n->Bahan Isi :
\n100 gram rebung
\n100 gram daging ayam cincang
\n50 gram udang cincang
\n3 butir telur
\n1 ikat daun bawang
\n1 buah bawang bombay
\n2 siung bawang putih
\n1 sdt garam
\n4 sdt gula pasir
\n1 sdt kaldu bubuk
\n1/2 sdt merica bubuk
\n2 sdm kecap manis
\n->Bahan Saus :
\n50 ml tauco
\n100 ml saus tomat
\n1/2 sdt garam
\n5 sdm gula pasir
\n1/2 sdt cuka masak
\n1 sdm tepung maizena
\n->Langkah:
\n1.Pertama kita buat isi nya terlebih dahulu, potong/iris rebung memanjang sebesar korek api, kemudian cuci dan rebus sampai empuk dan aroma khas nya berkurang, kemudian bilas dibawah air mengalir dan tiriskan
\n2.Kocok telur dan goreng orak arik (scrambell egg) sampai matang dan sisihkan
\n3.Tumis bawang putih hingga harus, masuk kan daun bawang, bawang bombay, ayam cincang, udang cincang, aduk rata,tambahkan 1/2 gelas air masak hingga mendidih, masuk kan rebung, garam, gula, merica bubuk, kecap manis, kaldu bubuk dan telur orak arik masak sampai bumbu meresap dan kuah menyusut, angkat dan sisihkan
\n4.Siapkan sausnya, campur tauco, saus tomat, garam, gula dan tepung maizena(yang sudah dilarutkan dengan 1 gelas air) masak dengan api kecil sambil diaduk terus hingga mendidih, angkat dan sisihkan
\n5.Tahap selanjutnya membuat kulit lumpia, campur semua bahan kulit menjadi satu, kemudian mixer dengan speed sedang saja selama 5 menit, kemudian diamkan 30 menit, baru siap di cetap di atas wajan anti lengket yang di oles minyak terlebih dahulu
\n6.Isi kulit lumpia dengan isian lumpia, lipat bentuk amplop sampai adonan selesai, kemudian siap kan minyak panas dengan api sedang, goreng lumpia dan sajikan bersama saus nya, (apabila ingin lumpia basah, maka setelah lumpia di lipat bentuk amplop bisa langsung disajikan bersama saus tanpa harus digoreng terlebih dahulu) selamat mencoba:)</string>
    <string name="i">->Bahan:\n250 gr tempe, iris tipis lebar 10 x 6 x 1 cm\n75 gr tepung beras\n25 gr tepung kanji\n3 batang kucai, potong ½ cm\n125 ml air
\n->Haluskan:
\n2 sdt ketumbar
\n1 siung bawang putih
\n1 cm kencur
\ngaram secukupnya
\n->Cara membuat tempe mendoan:
\n1.Campur bumbu halus dengan tepung beras dan kanji.
\n2.Aduk rata sambil dituang air sedikit demi sedikit.
\n3.Aduk terus hingga rata dan licin.
\n4.Masukkan kucainya.
\n5.Panaskan minyak banyak di penggorengan.
\n6.Celupkan tempe satu persatu ke dalam adonan tepung.
\n7.Goreng sampai kecoklatan.
\n8.Angkat dan sajikan dengan cabe rawit.</string>
    <string name="j">->Bahan:
\n300 gram beras
\n600 ml air, sesuaikan dengan kondisi beras
\n2 batang serai, memarkan
\n5 lembar daun salam
\n12 butir bawang merah, iris tipis
\n5 siung bawang putih, iris tipis
\n10 buah cabai rawit
\n1/2 sdt garam
\n2 sdm minyak goreng untuk menumis
\nSegenggam daun kemangi
\n100 gr teri medan, goreng hingga matang\n
->Pelengkap:
\n5 buah tempe goreng
\nSambal terasi\n
        ->Cara membuat:
\n1.Panaskan minyak, tumis serai, daun salam, bawang merah, bawang putih, dan cabai rawit hingga harum, angkat dan tiriskan.
\n2.Masukkan beras yang sudah dicuci ke panci rice cooker dan tumisan bumbu, tuang air sesuai takaran. Masak hingga air berkurang, aduk-aduk, tutup rice cooker.
\n3.Masukkan teri medan, daun kemangi, aduk hingga tercampur rata. Masak sekali lagi agar nasi matang, aduk-aduk kembali nasi dan sajikan bersama pelengkap dan lalap. </string>
    <string name="k">->Bahan :
\n1 kg daging kerbau
\n2 batang serai, geprek keduanya menggunakan cobek
\n2 lembar daun salam
\n4 tauge, cuci bersih
\n3 cm lengkuas, (di geprek)
\n½ sendok teh kaldu bubuk instan rasa ayam atau sapi
\n3 buah jeruk nipis, peras dan ambil sarinya
\nGula secukupnya
\nGaram secukupnya
\n3 sendok kecap manis
\nMinyak untuk menggoreng dan menumis
\nair bersih secukup nya\n
->Bumbu halus :
\n½ sendok teh jinten
\n1 sendok makan merica bubuk
\n3 cm jahe
\n4 siung bawang putih
\n6 siung bawang merah
\n6 buah kemiri\n
->Bahan pelengkap :
\nBawang goreng secukupnya
\nDaun seledri secukupnya iris tipis
\nDaun bawang secukupnya, iris tipis
\n4 butir telur rebus, kupas dan belah menjadi 2 bagian\n
->Cara memasak soto Kudus dengan resep spesial:
\nResep soto Kudus yang pertama, Anda bisa merebus air dan masukan daging kerbau, lengkuas, serai dan daun salam. Tambahkan juga gula dan garam sesuai dengan selera. Masak semua bahan selama kurang lebih 45 menit hingga air berubah menjadi kaldu dan tercium bau harum. Apabila daging kerbau sudah empuk, angkat dan tiriskan.
Siapkan bahan bumbu, kemudian haluskan memakai cobek, jangan memakai blender agar rasa nya lebih sedap dan enak.
Siapkan wajan untuk menumis bumbu yang sudah halus, tumis sampai benar-benar matang dan tercium bau harum. Masukan bumbu yang sudah ditumis ke dalam kaldu soto. Tambahkan juga kaldu ayam instan, garam, gula, air perasan jeruk nipis dan kecap manis.
Aduk semua bahan hingga merata dan masak hingga mendidih selam 30 menit agar semua bahan tercampur merata.
Masukan suwiran daging ayam dan taoge, lalu matikan api.
Untuk penyajiannya, tuang kuah soto dalam mangku Tambahkan irisan daun bawang dna seledri dan jangan lupa taburi bawang goreng.
Soto kudus siap dinikmati</string>
</resources>