<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/telenan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lotek">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Lotek"
            android:textSize="37dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />

       <ImageView
           android:id="@+id/logo"
           android:layout_width="match_parent"
           android:layout_height="110dp"
           android:gravity="center"
           android:src="@drawable/lotek"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="727dp"
            android:layout_margin="1dp"
            android:text="@string/bahan"
            android:textSize="12pt"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="692dp"
            android:layout_margin="1dp"
            android:text="@string/cara"
            android:textSize="12pt"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:layout_margin="1dp"
            android:text="@string/tips"
            android:textSize="12pt"
            android:textStyle="bold"/>




    </LinearLayout>
</ScrollView>