<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/telenan"
    tools:context=".MieKocok">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Mie Kocok"
            android:textSize="37dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="190dp"
            android:layout_height="140sp"
            android:id="@+id/logo"
            android:src="@drawable/miekocok"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="87dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_margin="1dp"
            android:text="@string/a"
            android:textSize="12pt"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_margin="1dp"
            android:text="@string/b"
            android:textSize="12pt"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="740dp"
            android:layout_margin="1dp"
            android:text="@string/c"
            android:textSize="12pt"
            android:textStyle="bold"/>




    </LinearLayout>
</ScrollView>